Added test asset files and updated conresponding cmake files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,21 @@
-add_executable(test_hello test_hello.c)
-target_link_libraries(test_hello PRIVATE gc_lib)
-add_test(NAME test_hello COMMAND test_hello)
+# List of tests
+set(TESTS
+        hash_test
+        rb_tree_test
+        main_test
+)
+
+foreach(test_name IN LISTS TESTS)
+    add_executable(${test_name} ${test_name}.c)
+    target_link_libraries(${test_name} PRIVATE gc_lib)
+
+    # Copy assets folder after building the test
+    add_custom_command(TARGET ${test_name} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_CURRENT_SOURCE_DIR}/assets
+            $<TARGET_FILE_DIR:${test_name}>/assets
+    )
+
+    # Register test with ctest
+    add_test(NAME ${test_name} COMMAND ${test_name})
+endforeach()
